<resources>
    <string name="app_name">FerryTale</string>

    <string name="tab_text_1">COMPLETED</string>
    <string name="tab_text_2">CANCELLED</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="journeyDate">Journey Date</string>
    <string name="searchBtnText">SEARCH</string>
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>
    <string name="myBookingsTime">09:15A.M.</string>
    <string name="myBookingDay">SUNDAY</string>
    <string name="myBookingDate">16 MARCH</string>
    <string name="statusText">CONFIRMED</string>
    <string name="sourceText">LUMUT JETTY</string>
    <string name="destText">PANGKOR JETTY</string>
    <string name="cancelWarningText">You are about to cancel your ticket</string>
    <string name="refundAmountText">Maximum Refundable Amount</string>
    <string name="refundAmount">RM13.50</string>
    <string name="fareBreakupText">Fare Breakup</string>
    <string name="paidText">Paid</string>
    <string name="refundableText">Refundable</string>
    <string name="totalText">TOTAL</string>
    <string name="totalPaidAmount">RM13.50</string>
    <string name="totalRefundableAmount">RM13.50</string>
    <string name="fareText">FARE</string>
    <string name="farePaidAmount">RM13.50</string>
    <string name="fareRefundableAmount">RM13.50</string>
    <string name="viewCancellationPolicyText">View Cancellation Policy</string>
    <string name="proceedBtnText">PROCEED</string>
    <string name="homeText">Home</string>
    <string name="myBookingsText">My Bookings</string>
    <string name="helpText">Help</string>
    <string name="myBookingTitle">My Bookings</string>

    <!-- Ticket Details -->
    <!-- detail1CardView -->
    <string name="status">CONFIRMED</string>
    <string name="ticketDate">16-03-2020</string>

    <!-- detail2CardView -->
    <string name="FROM">FROM</string>
    <string name="TO">TO</string>
    <string name="source">LUMUT JETTY</string>
    <string name="dest">P.PANGKOR JETTY</string>

    <!-- detail3CardView -->
    <string name="PASSENGERS">PASSENGERS</string>
    <string name="AGE">AGE</string>
    <string name="passengerName">Geralt</string>
    <string name="passengerAge">33</string>
    <string name="ageCat">(ADULT)</string>

    <!-- detail4CardView -->
    <string name="TICKETNUMBER">TICKET NUMBER</string>
    <string name="TOTAL">TOTAL</string>
    <string name="ticketNo">KSM70911567</string>
    <string name="totalAmount">RM11.50</string>

    <!-- cancelTicketBtn -->
    <string name="cancelTicketBtnText">CANCEL TICKET</string>

    <!-- schedule -->
    <!-- title bar -->
    <string name="sourceLoc">Lumut Jetty</string>
    <string name="destLoc">P.Pangkor Jetty</string>
    <string name="date">16 MAR</string>

    <!-- total search entries found -->
    <string name="totalEntries">1</string>
    <string name="ferrysFound">"FERRY(S) FOUND</string>

    <!-- search result card view -->
    <string name="opImage"></string>
    <string name="dpTime">09:15 AM</string>
    <string name="hrDuration">0</string>
    <string name="h">"h"</string>
    <string name="minDuration">33</string>
    <string name="min">"min"</string>
    <string name="seatQty">100</string>
    <string name="seatText">seats</string>
    <string name="adLogo"></string>
    <string name="chLogo"></string>
    <string name="RM">"RM"</string>
    <string name="adPrice">7.00</string>
    <string name="chPrice">2.50</string>

    <!-- booking -->
    <!-- contact card view -->
    <string name="contactInfoText">"CONTACT INFORMATION"</string>
    <string name="primaryPassengerText">"Primary Passenger"</string>
    <string name="emailIDText">EMAIL ID</string>
    <string name="mobileNoText">MOBILE NUMBER</string>

    <!-- passenger card view -->
    <string name="passengerInfoText">"PASSENGER INFORMATION"</string>
    <string name="nameText">NAME</string>
    <string name="ageText">AGE</string>
    <string name="coPassengerText">Co-Passenger</string>

    <!-- booking button -->
    <string name="bookingBtnText">BOOKING</string>

    <!-- terms & conditions -->
    <string name="termsSentence">"By clicking booking you agree to our "</string>
    <string name="terms">"Terms and Conditions"</string>
    <string name="and">"and"</string>
    <string name="policy">"Private Policy"</string>

    <!-- My Account -->
    <!-- myAccountCardView -->
    <string name="mobileNo">"014-3006808"</string>
    <string name="gmail">"gerardngai9@gmail.com"</string>

    <!-- option -->
    <!-- myBookingsCardView -->
    <string name="myBookingsText2">"My Bookings"</string>

    <!-- copassengerCardView -->
    <string name="copassengerText">"Co-Passengers"</string>

    <!-- helpCardView -->
    <string name="helpText2">"Help"</string>

    <!-- contactCardView -->
    <string name="contactText">"Contact Us</string>

    <!-- settingsCardView -->
    <string name="settingsText">"Settings</string>

    <!-- logoutCardView -->
    <string name="logoutText">"Logout</string>


    <!-- Staff Account -->
    <!-- myAccountCardView -->
    <string name="StaffmobileNo">"012-7673137"</string>
    <string name="Staffgmail">"mrfoo19990831@gmail.com"</string>

    <!-- option -->
    <!-- myBookingsCardView -->
    <string name="CustomerBookingsText2">"All User Bookings"</string>

    <!-- copassengerCardView -->
    <string name="editScheduleText">"Edit or Modify Schedule"</string>

    <!-- helpCardView -->
    <string name="ViewUserText">"View User"</string>


    <!-- logoutCardView -->
    <string name="StafflogoutText">"Logout</string>

    <string name="PopularFerryCompanies">Popular Ferry Companies</string>
    <string name="FerryTaleIcon">FerryTaleIcon</string>
    <string name="FerryTaleDescription1">1</string>
    <string name="FerryTaleDescription2">2</string>
    <string name="FerryTaleDescription3">3</string>
    <string name="FerryTaleDescription4">4</string>
    <string name="DesButtonClick1">DesButtonClick1</string>
    <string name="DefaultDesc"> ~Welcome For Using FerryTale !~</string>
    <string name="JoinButton">Join Now</string>
    <string name="LoginButton">Login</string>
    <string name="Preference">Preference</string>
    <string name="Language">Language</string>
    <string name="Profile">Profile</string>
    <string name="EditName">Name</string>


    <!-- Profile -->
    <!-- personalDetailsCardView -->
    <string name="PersonalDetailsText">PERSONAL DETAILS</string>
    <string name="EditIcon">EditIcon</string>
    <string name="EditNameBtn">Edit</string>
    <string name="EditBirthDateBtn">Edit</string>
    <string name="EditBirthDate">Birth Of Day</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">( Full Name )</string>
    <string name="ApplicationName">FerryTale</string>
    <string name="LoginbtnL">Login</string>
    <string name="RegisterBtnL">Register Now</string>
    <string name="RegisterAccount">Register Account</string>
    <string name="Birthday">( Birth of date )</string>
    <string name="phoneNum">( No Phone Number )</string>
    <string name="Password">( Password )</string>
    <string name="PasswordConfirmed">( Retype Password )</string>
    <string name="Email">( Email : abc123@example.com )</string>
    <string name="SignUp">Sign Up</string>
    <string name="Cancel">Cancel</string>
    <string name="CreditCardNum">Credit Card Num</string>
    <string name="payment">Payment</string>
    <string name="totalpayamount">Total Pay Amount :</string>
    <string name="EditPhone">Phone</string>
    <string name="EditEmail">Email</string>
    <string name="EditPassword">Password</string>
    <string name="EditPhoneBtn">Edit</string>
    <string name="EditEmailBtn">Edit</string>
    <string name="EditPasswordBtn">Edit</string>
    <string name="SubmitBtn">Submit</string>
    <string name="BackEditBtn">Back</string>
    <string name="PayAmountValue">PayAmountValue</string>
    <string name="CVV">CVV</string>
    <string name="validDate">validDate</string>
    <string name="Purchase">Purchase</string>
    <string name="CancelPurchase">Cancel</string>
    <string name="MyAccount">MyAccount</string>
    <string name="MemberEmail">MemberEmail</string>
    <string name="MyBooking">MyBooking</string>
    <string name="Cards">Cards</string>
    <string name="coopassengers">coopassengers</string>
    <string name="offer">offer</string>
    <string name="help">help</string>
    <string name="CallSupport">CallSupport</string>
    <string name="ContactUs">Contact Us</string>
    <string name="preference">preference</string>
    <string name="Logout">Logout</string>
    <string name="contactus">Contact Us</string>
    <string name="contactusdesc">The support team is always here for help.</string>
    <string name="editdesc1">Please Modify To Your New Name </string>
    <string name="editdesc2">Please Modify To Your New Password</string>
    <string name="editdesc3">Retype New Password For Confirmation</string>
    <string name="editdesc4">Please Modify To Your New Phone Number</string>
    <string name="ConfirmEditNameBtn">Confirm</string>
    <string name="ConfirmEditPhoneNoBtn">Confirm</string>
    <string name="ConfirmEditPasswordBtn">Confirm</string>
    <string name="CancelEditNameBtn">Cancel</string>
    <string name="CancelEditPhoneNoBtn">Cancel</string>
    <string name="CancelEditPasswordBtn">Cancel</string>
    <string name="editHint1">Enter your new name here</string>
    <string name="editHint2">Enter your new password here</string>
    <string name="editHint3">Re-enter your new password here</string>
    <string name="editHint4">Enter your new phone number here</string>
    <string name="insertScheduleBtn">Insert New Schedule</string>
    <string name="ConfirminsertScheduleBtn">Confirm</string>
    <string name="CancelinsertScheduleBtn">Cancel</string>
    <string name="ScheduleTimeHint">Enter Schedule Time</string>
    <string name="OriginLocationHint">Enter Origin</string>
    <string name="DestinationHint">Enter Destination</string>
    <string name="AdultPriceHint">0.00</string>
    <string name="ChildrenPriceHint">0.00</string>
    <string name="cu1">Organization Location</string>
    <string name="cu2">Jalan Prima Setapak 7, Taman Setapak, 53000 Kuala Lumpur, Wilayah Persekutuan Kuala Lumpur</string>
    <string name="cu3">Operation Hours</string>
    <string name="cu4">8:00a.m. to 8:00p.m.</string>
    <string name="cu5">Customer Service</string>
    <string name="cu6">012-7673137 (24/7)</string>
    <string name="scheduleDuration">1 hour 30 minutes</string>
    <string name="insertscheduleDurationhint">Enter hours and minutes </string>
    <string name="staffdesc">Welcome ! You are login as a staff now. </string>
    <string name="AllName1">Name: </string>
    <string name="AllAge1">Age: </string>
    <string name="AllEmail1">Email: </string>
    <string name="AllPhoneno1">Phone No: </string>



    <string-array name="role_array">
        <item>Member</item>
        <item>Staff</item>
    </string-array>

</resources>